# GitMentor

./: .cursorignore  .gitignore  .npmrc  BUILD-README.md  BUILD_TROUBLESHOOTING.md  DEPLOYMENT_GUIDE.md  LICENSE  PACKAGING_GUIDE.md  POWERSHELL_FIX_REPORT.md  PROJECT_SUMMARY.md  README-MVP.md  README.md  README_EN.md  VSCODE-DEV-GUIDE.md  build-windows-package.bat  build_backend.py  build_backend_china.py  build_backend_fast.py  build_backend_minimal.py  build_backend_wheel.py  build_complete_china.bat  build_frontend_only.bat  build_release.py  build_simple.bat  build_simple_backend.py  build_windows.bat  dev-start.bat  index.html  install_deps_manual.bat  package-lock.json  package.json  pip.conf  start.bat  start.sh  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.js
.cargo/: config.toml
.github/: pull_request_template.md
GitMentor-Lite/: AGENTS.md  (+20 more)
GitMentor-Lite/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
GitMentor-Lite/src-tauri/.config/: ai_config.json  conversation_history.json  prompt_templates.json
GitMentor-Lite/src-tauri/binaries/: README.md  setup-git.cjs
GitMentor-Lite/src-tauri/capabilities/: default.json
GitMentor-Lite/src-tauri/src/: lib.rs  main.rs
GitMentor-Lite/src-tauri/src/commands/: ai_analysis_commands.rs  ai_commands.rs  daily_report_commands.rs  debug_commands.rs  git_commands.rs  git_config_commands.rs  gitflow_commands.rs  mod.rs  repository_commands.rs  system_commands.rs  template_commands.rs  unified_template_commands.rs  update_commands.rs
GitMentor-Lite/src-tauri/src/core/: ai_analysis_prompts.rs  ai_config.rs  ai_manager.rs  ai_provider.rs  ai_response_cache.rs  conversation_logger.rs  git_config.rs  git_engine.rs  layered_commit_manager.rs  llm_client.rs  mod.rs  prompt_manager.rs  report_engine.rs  response_cleaner.rs  unified_template_manager.rs  update_manager.rs  versioned_template_manager.rs
GitMentor-Lite/src-tauri/src/core/providers/: anthropic.rs  dashscope.rs  deepseek.rs  doubao.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  zhipu.rs
GitMentor-Lite/src-tauri/src/templates/: commit_analysis_deep.hbs  commit_analysis_detailed.hbs  commit_analysis_simple.hbs  daily_summary_basic.hbs  daily_summary_enhanced.hbs
GitMentor-Lite/src-tauri/src/types/: git_types.rs  mod.rs  template_types.rs
GitMentor-Lite/src-tauri/src/utils/: mod.rs  token_counter.rs
GitMentor-Lite/src-tauri/templates/: commit_analysis_deep.hbs  commit_analysis_detailed.hbs  commit_analysis_simple.hbs  commit_chinese.hbs  commit_conventional.hbs  commit_detailed.hbs  commit_standard.hbs  daily_summary_basic.hbs  daily_summary_enhanced.hbs  daily_summary_executive.hbs  daily_summary_optimized.hbs
(+153 files in other folders)
