[package]
name = "gitmentorlite"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# 指定二进制文件名 - Author: Evilek, Date: 2025-01-10
[[bin]]
name = "GitMentorLite"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gitmentor_lite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "0.1.2", features = [] }

[dependencies]
tauri = { version = "0.1.2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "0.1.2" }
serde_json = "1"

# GitMentor MVP dependencies
git2 = "0.18"
reqwest = { version = "0.1.2" }
tokio = { version = "0.1.2" }
anyhow = "1.0"
handlebars = "4.5"
toml = "0.8"
async-trait = "0.1"
dirs = "5.0"
chrono = { version = "0.1.2" }
uuid = { version = "0.1.2" }
sha2 = "0.10"
once_cell = "1.19"
regex = "1.10"

